# PlaudBlender

./: .env.example  .gitignore  README.md  REFACTORING_PLAN.md  chronos_app.py  docker-compose.yml  generate_mindmap.py  gui.py  gui_legacy.py  plaud_setup.py  pyproject.toml  requirements.txt  test_components.py  test_gui_import.py  verify_integration.py
.github/: copilot-instructions.md
.streamlit/: config.toml
docs/: PROJECT_GUIDE.md  README.md  architecture-roadmap.md  audit-checklist.md  chronos-mvp.md  gemini-deep-research-RAG.txt  gemini-deep-research2.txt  gemini-final-prompt.txt  pinecone-cheatsheet.md  pinecone-configure-index.md  pinecone-create-index-integrated.md  pinecone-create-index.md  pinecone-delete-index.md  pinecone-describe-index.md  pinecone-describe-model.md  pinecone-embed-api.md  pinecone-get-index-stats.md  pinecone-integration-playbook.md  pinecone-list-indexes.md  pinecone-list-models.md  pinecone-python-sdk.md  pinecone-query.md  pinecone-rerank.md  pinecone-upsert.md  qdrant-migration-guide.md
gui/: __init__.py  app.py  state.py  theme.py
scripts/: chronos_pipeline.py  embed_to_qdrant.py  mcp_server.py  migrate_add_unix_timestamps.py  plaud_auth_utils.py  process_pending.py  sync_to_pinecone.py
src/: __init__.py  config.py  dual_store_processor.py  llm_processor.py  notion_client.py  notion_mcp_client.py  notion_sync.py  pinecone_client.py  plaud_client.py  plaud_oauth.py  qdrant_client.py  vector_store.py  visualizer.py
tests/: conftest.py  test_database_models.py  test_processing_engine.py  test_processing_indexer.py  (+3 more)
(+82 files in other folders)
